# LazyEngineer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
src/: main.py  setting.py  settings.py  test.py
src/assets/commit/: v1.jinja2
src/domain/generation/api/: gemini.py
src/domain/gitmanager/: manager.py
src/domain/renderer/: renderer.py
src/utils/: path.py
