[tool.poetry]
name = "lazyengineer"
version = "0.1.0"
description = ""
authors = ["LEE HYUN SEUNG <47444387+hslrock@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^70.0.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
pre-commit = "^3.7.1"
mypy = "^1.10.0"
flake8-pyproject = "^1.2.3"
requests = "^2.32.3"
openai = "^1.34.0"
google-cloud-aiplatform = "^1.55.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
exclude = """
(?x)(
  ai-application-common/
  | .venv/
)
"""

[tool.isort]
profile = "black"
line_length = 120
force_single_line = true
skip_glob = [
  "ai-application-common/**",
  ".venv/**",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = """
(?x)(
  ai-application-common/
  | .venv/
)
"""

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401", "C901"]
max-line-length = 120
max-complexity = 12
per-file-ignores = [
  "__init__.py:F401",
  "tests/*:F401,F841",
]
